objects/AR_User_Storys__c.object
<CustomObject>
    <description>AR User Story</description>
    <fields>
        <fullName>AR_User_Storys__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Asset</label>
        <lookupFilter>
            <active>true</active>
            <infoMessage>AR User Story</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>AR User Story</relationshipLabel>
        <relationshipName>AR_User_Story</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>A__c</fullName>
        <description>AR User Story</description>
        <displayFormat>a-{000}</displayFormat>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>A</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Acc_Billing_Address__c</fullName>
        <description>AR User Story</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Acc_Billing_Address</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>AR User Story</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Authorization_Form__c</fullName>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Authorization Form</label>
        <referenceTo>AuthorizationForm</referenceTo>
        <relationshipLabel>AR User Story</relationshipLabel>
        <relationshipName>AR_User_Story</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <description>AR User Story</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>B</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Addres__c</fullName>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Billing Addres</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Categorys__c</fullName>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Categorys</label>
        <length>50</length>
        <referenceTo>Categorys__x</referenceTo>
        <relationshipLabel>AR User Story</relationshipLabel>
        <relationshipName>AR_User_Story</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <defaultValue>100</defaultValue>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Currency</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>AR User Story</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_time__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <description>AR User Story</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Date  time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Geo</label>
        <required>true</required>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>AR User Story</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Multi__c</fullName>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Multi</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <defaultValue>$Label.kcs_dev__aaaabcd</defaultValue>
        <description>AR User Story</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>AR User Story</description>
        <externalId>true</externalId>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Percent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <description>AR User Story</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Personal Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>AR User Story</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pick__c</fullName>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Pick</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Time</label>
        <length>7</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>isChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>isChecked</label>
        <type>Checkbox</type>
    </fields>
    <label>AR User Story</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AR User Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR User Story</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Not_Empty</fullName>
        <active>true</active>
        <description>AR User Story</description>
        <errorConditionFormula>Acc_Billing_Address__c &lt;&gt; NULL</errorConditionFormula>
        <errorMessage>AR User Story</errorMessage>
    </validationRules>
</CustomObject>